--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "framer-motion": "^4.1.17",
+    "mongoose": "^5.12.12",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
