--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.17",
     "mongoose": "^5.12.12",
+    "multer": "^1.4.2",
     "next": "10.2.2",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.32.13",
